# drbench

./: .env.example  .gitignore  README.md  minimal.py  minimal_local.py  pyproject.toml
docs/: citation_formats.md
services/drbench_tools/: pyproject.toml
services/drbench_tools/src/data/emails/: example_self_contained.jsonl
services/drbench_tools/src/data/users/: admins.csv  common_users.csv  company_users.csv  demo_users.csv
services/drbench_tools/src/data/users/admin/nextcloud/: admin-only.txt
services/drbench_tools/src/data/users/susan.smith/nextcloud/Employee Records/: Enhancing_Employee_Productivity_Great_Pasta.pptx  Great_Pasta_Gluten_Free_Launch.pptx  Great_Pasta_Gluten_Free_Launch_Presentation.pptx  Great_Pasta_Gluten_Free_Product_Launch.pptx  (+1 more)
services/drbench_tools/src/drbench_utils/: __init__.py
services/drbench_tools/src/drbench_utils/email/: __init__.py  mail_manager.py
services/drbench_tools/src/drbench_utils/filebrowser/: __init__.py  user_manager.py
services/drbench_tools/src/drbench_utils/mattermost/: __init__.py  user_manager.py
services/drbench_tools/src/drbench_utils/nextcloud/: __init__.py  user_manager.py
services/drbench_tools/src/health/: healthcheck.py  index_template.html
services/drbench_tools/src/mcp_servers/: __init__.py
services/drbench_tools/src/mcp_servers/examples/: mcp_client.py  template_server.py
services/drbench_tools/src/mcp_servers/nextcloud/: config.py  nextcloud_client.py  server.py
services/drbench_tools/src/scripts/: init_mail_data.py  init_mattermost_data.py  init_nextcloud_data.py  load_task.py  smtp_server.py  test_email_config.py
(+7772 files in other folders)
